--- a/instagram/src/pages/mainPage.css
+++ b/instagram/src/pages/mainPage.css
@@ -6,10 +6,14 @@
     width: 100%;
     height: 100%;
     background-color: #FAFAFA;
-
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.content_subarea{
+    margin: 0 auto;
 }
 .main_story{
     display: flex;
@@ -22,4 +26,12 @@
     width: 29.25rem;
     height: 5rem;
     padding: 10px 0px;
+}
+.main_post{
+    background-color: #fff;
+    border : 1px solid #E1E1E1;
+    border-radius: 7px;
+    width: 29.25rem;
+    height: 25rem;
+    margin-top: 20px;
 }
