--- a/instagram/src/pages/LoginPage.css
+++ b/instagram/src/pages/LoginPage.css
@@ -1,6 +1,9 @@
 *:focus {
     outline: 0;
 }
+a{
+    text-decoration: none;
+}
 button{
     border: none;
     background-color:transparent;
@@ -39,6 +42,9 @@ button{
 }
 .mx-auto{
     margin: 0 auto;
+}
+.justify-center{
+    justify-content: center;
 }
 .text-center{
     text-align: center;
@@ -111,9 +117,9 @@ button{
     touch-action: manipulation;
 }
 .whole{
-    justify-content: center;
     flex-grow: 1;
     max-width: 350px;
+    margin-top: 12px;
 }
 .whole-account{
     max-width: 350px;
@@ -131,6 +137,29 @@ button{
 }
 .account-margin{
     margin: 15px;
+}
+.download-app{
+    font-size: 14px;
+    line-height: 18px;
+    margin: 10px 20px 10px 20px;
+}
+.googleplay{
+    height: 40px;
+    margin-right: 8px;
+}
+.microsoft{
+    height: 40px;
+}
+.app-margin{
+    margin: 10px 0 10px 0;
+}
+.footer-tag{
+    margin: 0px 8px 8px 12px;
+    font-size: 12px;
+    color: rgb(142, 142, 142);
+}
+.footer-margin{
+    margin: 12px 0;
 }
 
 
