--- a/instagram/src/pages/AccountPage.css
+++ b/instagram/src/pages/AccountPage.css
@@ -5,7 +5,7 @@
     margin-top: 12px;
 }
 .account-container{
-    margin: 0px 40px;
+    margin: 0px 40px 40px;
 }
 .account_box{
     border:1px solid rgba(219, 219, 219, 1);
@@ -30,6 +30,17 @@
     font-size: 14px;
     color: #fff;
 }
+.account-text{
+    padding: 7px 16px;
+}
+.account-ac{
+    font-size: 14px;
+    color: rgb(0, 149, 246);
+    margin-top: 15px;
+}
+.round-lg{
+    border-radius: 8px;
+}
 .facebook_logo{
     height: 16px;
     width: 16px;
@@ -37,4 +48,12 @@
     color: #0095F6;
     font-weight: 700;
     margin-right: 8px;
+}
+.call-info{
+    margin: 10px 0;
+    font-size: 12px;
+    color: rgb( 142, 142, 142);
+}
+.account-more{
+    color: rgb(38, 38, 38);
 }
