--- a/instagram/src/pages/LoginPage.css
+++ b/instagram/src/pages/LoginPage.css
@@ -166,4 +166,11 @@ button{
     margin: 12px 0;
 }
 
+/*media css*/
+@media (max-width: 875px){
+    .react-image{
+        display: none;
+    }
+}
+
 
