--- a/instagram/src/pages/LoginPage.css
+++ b/instagram/src/pages/LoginPage.css
@@ -165,6 +165,40 @@ button{
 .footer-margin{
     margin: 12px 0;
 }
+.bg-img{
+    height: 581.15px;
+    width: 380px;
+    padding-right: 3rem;
+    margin-bottom: 2rem;
+}
+.background-img{
+    background-image: url("https://static.cdninstagram.com/images/instagram/xig/homepage/phones/home-phones-2x.png?__makehaste_cache_breaker=73SVAexZgBW");
+    background-size: 468.32px 634.15px;
+    height: 581.15px;
+    margin-bottom: 100px;
+    align-self:center;
+
+    background-position: -50px 0;
+    display: block;
+}
+.sub-background{
+    width: 260px;
+    height: 540px;
+    margin-left: 103px;
+    margin-top:26px;
+    background-size: cover;
+    border-radius: 20px;
+
+    background-repeat: no-repeat;
+    animation: imgchange 16s infinite;
+}
+@keyframes imgchange {
+    0% {background-image: url("../assets/img/background_img_1.png");}
+    25% {background-image: url("../assets/img/background_img_2.png");}
+    50% {background-image: url("../assets/img/background_img_3.png");}
+    75% {background-image: url("../assets/img/background_img_4.png");}
+    100% {background-image: url("../assets/img/background_img_1.png");}
+}
 
 /*media css*/
 @media (max-width: 875px){
