--- a/src/components/StoryBar.css
+++ b/src/components/StoryBar.css
@@ -1,17 +1,22 @@
 .story-bar{
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 90px;
     justify-content: center;
     align-items: center;
 }
 .story-pic{
     border-radius: 50%;
-    width: 50%;
+    width: 56px;
+    height: 56px;
     border: 2px solid transparent;
     background-image: linear-gradient(#fff, #fff),
     linear-gradient(to right, red 0%,  orange 100%);
     background-origin: border-box;
     background-clip: content-box, border-box;
     cursor: pointer;
+}
+.story-id{
+    margin-top:0.7rem;
+    font-size: 12px;
 }
