--- a/src/pages/mainPage.css
+++ b/src/pages/mainPage.css
@@ -9,21 +9,17 @@
     flex-direction: column;
     justify-content: center;
     justify-content: space-between;
-    margin: 0 auto;
-}
-.content_subarea{
-    margin: 0 auto;
+    margin: 0 97px;
 }
 .main_story{
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: #fff;
-    border : 1px solid #E1E1E1;
     border-radius: 7px;
-    margin-top : 15px;
-    width: 29.25rem;
-    height: 5rem;
+    margin: 30px 0;
+    width: 39.375rem;
+    height: 5.4rem;
     padding: 10px 0px;
 }
 .main_post{
